--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 * {
     margin: 0;
     padding: 0;
@@ -17,8 +15,9 @@
     width: 80%;
     margin: 0 auto;
   }
-  
-  
+  .img-mar{
+      display: flex
+  }
   header {
     background: linear-gradient(to right, #00aaff, #004e92);
     color: #ffffff;
